# Generated by Django 6.0.3 on 2026-03-16 08:40

import django.core.validators
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ImportExcelBC',
            fields=[
                ('id_import', models.AutoField(primary_key=True, serialize=False)),
                ('fichier_excel_original', models.FileField(upload_to='marches/uploads/')),
                ('date_import', models.DateTimeField(auto_now_add=True)),
                ('statut_import', models.CharField(choices=[('brouillon', 'brouillon'), ('en_revision', 'en_revision'), ('valide', 'valide'), ('rejete', 'rejete')], default='brouillon', max_length=20)),
                ('source_type', models.CharField(choices=[('bc', 'bc'), ('marche', 'marche'), ('donation', 'donation')], max_length=20)),
                ('observations', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'import excel',
                'verbose_name_plural': 'imports excel',
            },
        ),
        migrations.CreateModel(
            name='LotArticle',
            fields=[
                ('id_lot', models.AutoField(primary_key=True, serialize=False)),
                ('numero_lot', models.IntegerField()),
                ('designation', models.CharField(max_length=255)),
                ('quantite_commandee', models.IntegerField()),
                ('quantite_recue', models.IntegerField(default=0)),
                ('observation', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': "lot d'article",
                'verbose_name_plural': "lots d'articles",
            },
        ),
        migrations.CreateModel(
            name='MarcheBC',
            fields=[
                ('id_marche', models.AutoField(primary_key=True, serialize=False)),
                ('reference', models.CharField(max_length=100, unique=True)),
                ('type_acquisition', models.CharField(choices=[('marche', 'marche'), ('bon_commande', 'bon_commande'), ('donation', 'donation')], max_length=20)),
                ('date_creation', models.DateField(auto_now_add=True)),
                ('delai_reception_jours', models.IntegerField()),
                ('date_livraison_prevue', models.DateField(blank=True, null=True)),
                ('statut', models.CharField(choices=[('en_attente_livraison', 'en_attente_livraison'), ('receptionne_et_stocke', 'receptionne_et_stocke'), ('non_conforme', 'non_conforme')], default='en_attente_livraison', max_length=30)),
                ('fichier_cps', models.FileField(blank=True, null=True, upload_to='marches/cps/')),
            ],
            options={
                'verbose_name': 'marche ou bon de commande',
                'verbose_name_plural': 'marches et bons de commande',
            },
        ),
        migrations.CreateModel(
            name='MarcheEtape',
            fields=[
                ('id_etape', models.AutoField(primary_key=True, serialize=False)),
                ('ordre', models.IntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(8)])),
                ('nom_etape', models.CharField(choices=[('marche_cree', 'marche_cree'), ('contrat_signe', 'contrat_signe'), ('en_attente_livraison', 'en_attente_livraison'), ('livraison_en_cours', 'livraison_en_cours'), ('receptionne_magasin', 'receptionne_magasin'), ('controle_qualite', 'controle_qualite'), ('paiement_en_cours', 'paiement_en_cours'), ('paiement_effectue', 'paiement_effectue')], max_length=30)),
                ('statut', models.CharField(choices=[('en_attente', 'en_attente'), ('en_cours', 'en_cours'), ('complete', 'complete'), ('bloque', 'bloque')], default='en_attente', max_length=20)),
                ('date_debut', models.DateTimeField(blank=True, null=True)),
                ('date_fin', models.DateTimeField(blank=True, null=True)),
                ('commentaire', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'etape de marche',
                'verbose_name_plural': 'etapes de marche',
                'ordering': ['ordre'],
            },
        ),
        migrations.CreateModel(
            name='StagingItem',
            fields=[
                ('id_staging', models.AutoField(primary_key=True, serialize=False)),
                ('designation_brute', models.CharField(max_length=500)),
                ('designation_normalisee', models.CharField(blank=True, max_length=255)),
                ('quantite', models.IntegerField(default=0)),
                ('type_detecte', models.CharField(blank=True, choices=[('', ''), ('consommable', 'consommable'), ('bien_inventaire', 'bien_inventaire')], max_length=20)),
                ('confiance_ia', models.DecimalField(blank=True, decimal_places=2, max_digits=4, null=True, validators=[django.core.validators.MinValueValidator(0), django.core.validators.MaxValueValidator(1)])),
                ('statut', models.CharField(choices=[('en_attente', 'en_attente'), ('approuve', 'approuve'), ('rejete', 'rejete'), ('modifie', 'modifie')], default='en_attente', max_length=20)),
                ('correction_gestionnaire', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'element de staging',
                'verbose_name_plural': 'elements de staging',
            },
        ),
    ]
